# opengl-practice

./: README.md
HelloTriangle/: CMakeLists.txt  README.md  main.cpp
HelloWindow/: CMakeLists.txt  Download-instructions  README.md  main.cpp
first-project/: CMakeLists.txt  README.md  main.cpp
first-project/Libraries/include/glad/: glad.h
first-project/Libraries/src/: glad.c
